[gd_scene load_steps=10 format=2]

[ext_resource path="res://common/difficulty/difficulty.gd" type="Script" id=1]
[ext_resource path="res://common/common_bg/common_bg.tscn" type="PackedScene" id=2]
[ext_resource path="res://common/difficulty/level.gd" type="Script" id=3]
[ext_resource path="res://common/difficulty/1.png" type="Texture" id=4]
[ext_resource path="res://common/difficulty/1_rev.png" type="Texture" id=5]
[ext_resource path="res://common/difficulty/2.png" type="Texture" id=6]
[ext_resource path="res://common/difficulty/2_rev.png" type="Texture" id=7]
[ext_resource path="res://common/difficulty/level.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]

[node name="Difficulty" type="Sprite"]
z_index = 3900
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CommonBackground" parent="." instance=ExtResource( 2 )]

[node name="1" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( -260, 150 )
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="1"]
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpriteRev" type="Sprite" parent="1"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="1"]
scale = Vector2( 8.68082, 8.68082 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="2" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 260, 150 )
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="2"]
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpriteRev" type="Sprite" parent="2"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="2"]
scale = Vector2( 8.68082, 8.68082 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.627451 )
position = Vector2( 0, -130 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
[connection signal="input_event" from="1" to="1" method="_on_1_input_event"]
[connection signal="input_event" from="2" to="2" method="_on_2_input_event"]
